fix overflow error

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,7 @@ body {
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
+ overflow-x: hidden;
 }
 
 .logo {
